# k4r-data-provider

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  roscrud_conf.yml  setup.cfg  setup.py  test.bash
.github/workflows/: run-pytest.yml
k4r_data/: CMakeLists.txt  package.xml
k4r_data/launch/: k4r_data.launch  roscrud.launch
k4r_data/scripts/: k4r_data_to_ros.py  product.py  shelf.py  shelves_to_waypoints.py  utils.py
k4r_data/scripts/data_provider/: __init__.py  data.py  dt_api.py  dtapi_con.py  knowrob.py  static.py
k4r_data/scripts/data_provider/data/Uni-Bremen/products/: 0000040161112.json  0000040161181.json  0000040161310.json  0000040161747.json  0000040623474.json  0000040623962.json  0000040737584.json  3014260319595.json  3065890122413.json  3065890132252.json  3222270125154.json  3222270126250.json  3574660548952.json  3574661099200.json  3574661199627.json  3574661207636.json  3574661234083.json  3574661234090.json  3574661264967.json  3574661264974.json  3574661264981.json  3600542194891.json  4000290012895.json  4000487225923.json  4000487226036.json  4000487226050.json  4000576523664.json  4001499010644.json  4001499011665.json  4001499012358.json  4001499012365.json  4001499013676.json  4001499014635.json  4001499014659.json  4001499016103.json  4001499140648.json  4001499145698.json  4001499180057.json  4001499185267.json  4001499192791.json  (+799 more)
k4r_data/scripts/data_provider/data/WaterFront/: product_list.json
k4r_data_msgs/: CMakeLists.txt  package.xml
k4r_data_msgs/msg/: Product.msg  Shelf.msg
k4r_data_msgs/srv/: ProductCreate.srv  ProductDelete.srv  ProductGet.srv  ProductList.srv  ProductUpdate.srv  ShelfCreate.srv  ShelfDelete.srv  ShelfGet.srv  ShelfList.srv  ShelfOverwrite.srv  ShelfUpdate.srv
k4r_data_provider/: cli.py  dtapi_con.py  utils.py
k4r_data_provider/data_provider/: __init__.py  dt_api.py  files.py  knowrob.py
test/: test_parse_data.py
(+988 files in other folders)
